# project-g

./: .gitignore  .prettierignore  LICENSE  branch-actions.md  change-permissions-of-target.sh  change-permissions-of-this-project.sh  components.json  files.md  package-lock.json  package.json  platform-specific-requirements.md  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: release.yml
.husky/: pre-push
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browse.rs  fs.rs  git_utilities.rs  initialization.rs  lib.rs  main.rs  onboarding.rs
src-tauri/src/_backend_specific/: git.rs
src-tauri/src/_backend_specific/git/: executor.rs  utilities.rs
src-tauri/src/branch_actions/: handlers.rs  mod.rs  utilities.rs
src-tauri/src/browse/: branches.rs  handlers.rs  sidebar.rs  utilities.rs
src-tauri/src/browse/branches/: actions.rs  commit_history.rs  name_and_menu.rs
src-tauri/src/git_executor/: mod.rs
src-tauri/src/git_utilities/: branches.rs  mod.rs
src-tauri/src/git_utilities/branches/: helpers.rs
src-tauri/src/home/: repositories.rs
src-tauri/src/home/repositories/: checks.rs  saved.rs
src-tauri/src/onboarding/: handlers.rs  mod.rs  utilities.rs
src-tauri/src/repository_checks/: handlers.rs  utilities.rs
src-tauri/src/repository_store/: handlers.rs  helpers.rs  mod.rs  utilities.rs
src-tauri/src/saved_repos/: mod.rs
src-tauri/src/shell/: git.rs
src/lib/: browse.ts  env.ts  git-utilities.ts  onboarding.ts  (+2 more)
(+101 files in other folders)
