[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.4", features = [] }
tauri-plugin-log = "2.0.0-rc"
git2 = { version = "0.19.0", default-features = false }
uuid = { version = "1.11.0", features = ["v4"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = { version = "2.0.2", features = ["watch"] }
tauri-plugin-os = "2.0.0"
chrono = "0.4.38"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
